Updated radials and table

--- a/index.html
+++ b/index.html
@@ -25,15 +25,27 @@
 		<!--Complete Solutions-->
           <div class="card rel clearfix mtop">
             <div class="row">
-                <div class="col-xs-4 col-xs-offset-4">
+                <div class="col-xs-6">
                   <label class="radio-inline active">
-                    <input checked href="#prices" type="radio" name="radioOptions" id="inlineRadio1" value="option1"> Duck
+                    <input checked href="#prices" type="radio" name="radioOptions" id="inlineRadio1" value="option1"> 12W
                   </label>
                   <label class="radio-inline">
-                    <input href="#features"  type="radio" name="radioOptions" id="inlineRadio2" value="option2"> Duck
+                    <input href="#features"  type="radio" name="radioOptions" id="inlineRadio2" value="option2"> 18W
                   </label>
                   <label class="radio-inline">
-                    <input href="#requests" type="radio" name="radioOptions" id="inlineRadio3" value="option3"> Goose
+                    <input href="#requests" type="radio" name="radioOptions" id="inlineRadio3" value="option3"> 26W
+                  </label>
+                  <label class="radio-inline">
+                    <input href="#requests" type="radio" name="radioOptions" id="inlineRadio4" value="option4"> 38W
+                  </label>
+                  <label class="radio-inline">
+                    <input href="#requests" type="radio" name="radioOptions" id="inlineRadio5" value="option5"> 58W
+                  </label>
+                  <label class="radio-inline">
+                    <input href="#requests" type="radio" name="radioOptions" id="inlineRadio6" value="option6"> 81W
+                  </label>
+                  <label class="radio-inline">
+                    <input href="#requests" type="radio" name="radioOptions" id="inlineRadio7" value="option7"> 102W
                   </label>
                 </div>
               </div>
@@ -44,42 +56,46 @@
                   <div class="tab-content">
             				<div class="tab-pane active" id="prices">
                       <div class="row">
-                        <div class="col-xs-8">
-                          <table class="table table-hover">
+                        <div class="col-xs-6">
+                          <table class="table table-striped">
                             <thead>
                               <tr>
-                                <th>Color Temperature</th>
-                                <th>Lumens</th>
-                                <th>Input Watts</th>
-                                <th>Lumens per Watt</th>
-                                <th>CRI</th>
+                                <th>CCT</th>
+                                <th class="text-center">Lumens</th>
+                                <th class="text-center">Input Watts</th>
+                                <th class="text-center">lm/W</th>
+                                <th class="text-center">CRI</th>
                               </tr>
                             </thead>
                             <tbody>
-                              <tr>
+                              <tr class="text-center">
                                 <th scope="row">3000K</th>
                                 <td>00,000</td>
-                                <td>Otto</td>
-                                <td>@mdo</td>
-                                <td>blah</td>
+                                <td>000</td>
+                                <td>00</td>
+                                <td>00</td>
                               </tr>
-                              <tr>
+                              <tr class="text-center">
                                 <th scope="row">4000K</th>
-                                <td>Jacob</td>
-                                <td>Thornton</td>
-                                <td>@fat</td>
-                                <td>@fat</td>
+                                <td>00,000</td>
+                                <td>000</td>
+                                <td>00</td>
+                                <td>00</td>
                               </tr>
-                              <tr>
+                              <tr class="text-center">
                                 <th scope="row">5000K</th>
-                                <td colspan="2">Larry the Bird</td>
-                                <td>@twitter</td>
-                                <td>@twitter</td>
+                                <td>00,000</td>
+                                <td>000</td>
+                                <td>00</td>
+                                <td>00</td>
                               </tr>
                             </tbody>
                           </table>
+                          <br>
+                          <h5 class="smtitle text-center">Replaces up to</h5>
+                          <h3 class="text-center">250W MH</h3>
                         </div>
-                        <div class="col-xs-4">
+                        <div class="col-xs-6">
                           <div class="text-center top animate fadeIn" data-wow-delay="0.25s">
                              <img src="assets/images/xtormaxx-pm.png" class="img-responsive" />
                           </div>
