--- a/index.html
+++ b/index.html
@@ -25,39 +25,46 @@
 		<!--Complete Solutions-->
           <div class="card rel clearfix mtop">
             <div class="row">
-                <div class="col-xs-6">
+                <div class="col-xs-12">
+                  <h5 class="smtitle">Wattage Range:</h5>
                   <label class="radio-inline active">
-                    <input checked href="#prices" type="radio" name="radioOptions" id="inlineRadio1" value="option1"> 12W
+                    <input checked href="#12W" type="radio" name="radioOptions" id="inlineRadio1" value="option1"> 12W
                   </label>
                   <label class="radio-inline">
-                    <input href="#features"  type="radio" name="radioOptions" id="inlineRadio2" value="option2"> 18W
+                    <input href="#18W"  type="radio" name="radioOptions" id="inlineRadio2" value="option2"> 18W
                   </label>
                   <label class="radio-inline">
-                    <input href="#requests" type="radio" name="radioOptions" id="inlineRadio3" value="option3"> 26W
+                    <input href="#26W" type="radio" name="radioOptions" id="inlineRadio3" value="option3"> 26W
                   </label>
                   <label class="radio-inline">
-                    <input href="#requests" type="radio" name="radioOptions" id="inlineRadio4" value="option4"> 38W
+                    <input href="#38W" type="radio" name="radioOptions" id="inlineRadio4" value="option4"> 38W
                   </label>
                   <label class="radio-inline">
-                    <input href="#requests" type="radio" name="radioOptions" id="inlineRadio5" value="option5"> 58W
+                    <input href="#58W" type="radio" name="radioOptions" id="inlineRadio5" value="option5"> 58W
                   </label>
                   <label class="radio-inline">
-                    <input href="#requests" type="radio" name="radioOptions" id="inlineRadio6" value="option6"> 81W
+                    <input href="#81W" type="radio" name="radioOptions" id="inlineRadio6" value="option6"> 81W
                   </label>
                   <label class="radio-inline">
-                    <input href="#requests" type="radio" name="radioOptions" id="inlineRadio7" value="option7"> 102W
+                    <input href="#102W" type="radio" name="radioOptions" id="inlineRadio7" value="option7"> 102W
                   </label>
                 </div>
               </div>
-
               <br><br>
             <div class="row">
                 <div class="col-xs-12">
                   <div class="tab-content">
-            				<div class="tab-pane active" id="prices">
+            				<div class="tab-pane active" id="12W">
                       <div class="row">
                         <div class="col-xs-6">
-                          <table class="table table-striped">
+                          <h3>Crosstour LED</h3>
+                          <p>The Crosstour LED luminaire delivers from
+                          722 lumens (7W model), 2,135 lumens (18W model),
+                          2,751 lumens (28W model) to 4,269 lumens
+                          (38W model). Bright 5000K and 4000K CCT (18W, 26W, 38W),
+                          neutral warm 3500K CCT (7W).<br>
+                          <a href="http://www.cooperindustries.com/content/public/en/lighting/products/outdoor_wall_mount_lighting/_269859.brands.lighting!lumark!led.html"> Learn more > </a></p><br>
+                          <table class="table">
                             <thead>
                               <tr>
                                 <th>CCT</th>
@@ -68,13 +75,6 @@
                               </tr>
                             </thead>
                             <tbody>
-                              <tr class="text-center">
-                                <th scope="row">3000K</th>
-                                <td>00,000</td>
-                                <td>000</td>
-                                <td>00</td>
-                                <td>00</td>
-                              </tr>
                               <tr class="text-center">
                                 <th scope="row">4000K</th>
                                 <td>00,000</td>
@@ -97,33 +97,253 @@
                         </div>
                         <div class="col-xs-6">
                           <div class="text-center top animate fadeIn" data-wow-delay="0.25s">
-                             <img src="assets/images/xtormaxx-pm.png" class="img-responsive" />
+                             <img src="assets/images/xtorwallsmall.png" class="img-responsive" />
                           </div>
                         </div>
                       </div>
                     </div>
-            				<div class="tab-pane" id="features">
+            				<div class="tab-pane" id="18W">
                       <div class="row">
                         <div class="col-xs-6">
-                          <h5 class="smtitle text-center">Energy Stuff2</h5>
-                          <h3 class="text-center">Yatta Yatta.</h3>
+                          <table class="table table-striped">
+                            <thead>
+                              <tr>
+                                <th>CCT</th>
+                                <th class="text-center">Lumens</th>
+                                <th class="text-center">Input Watts</th>
+                                <th class="text-center">lm/W</th>
+                                <th class="text-center">CRI</th>
+                              </tr>
+                            </thead>
+                            <tbody>
+                              <tr class="text-center">
+                                <th scope="row">4000K</th>
+                                <td>00,000</td>
+                                <td>000</td>
+                                <td>00</td>
+                                <td>00</td>
+                              </tr>
+                              <tr class="text-center">
+                                <th scope="row">5000K</th>
+                                <td>00,000</td>
+                                <td>000</td>
+                                <td>00</td>
+                                <td>00</td>
+                              </tr>
+                            </tbody>
+                          </table>
+                          <br>
+                          <h5 class="smtitle text-center">Replaces up to</h5>
+                          <h3 class="text-center">250W MH</h3>
                         </div>
                         <div class="col-xs-6">
                           <div class="text-center top animate fadeIn" data-wow-delay="0.25s">
-                             <img src="assets/images/xtorflood.png" class="img-responsive" />
+                             <img src="assets/images/xtorwallsmall.png" class="img-responsive" />
                           </div>
                         </div>
                       </div>
                     </div>
-            				<div class="tab-pane" id="requests">
+            				<div class="tab-pane" id="26W">
                       <div class="row">
                         <div class="col-xs-6">
-                          <h5 class="smtitle text-center">Energy Stuff3</h5>
-                          <h3 class="text-center">Hwhat?</h3>
+                          <table class="table table-striped">
+                            <thead>
+                              <tr>
+                                <th>CCT</th>
+                                <th class="text-center">Lumens</th>
+                                <th class="text-center">Input Watts</th>
+                                <th class="text-center">lm/W</th>
+                                <th class="text-center">CRI</th>
+                              </tr>
+                            </thead>
+                            <tbody>
+                              <tr class="text-center">
+                                <th scope="row">4000K</th>
+                                <td>00,000</td>
+                                <td>000</td>
+                                <td>00</td>
+                                <td>00</td>
+                              </tr>
+                              <tr class="text-center">
+                                <th scope="row">5000K</th>
+                                <td>00,000</td>
+                                <td>000</td>
+                                <td>00</td>
+                                <td>00</td>
+                              </tr>
+                            </tbody>
+                          </table>
+                          <br>
+                          <h5 class="smtitle text-center">Replaces up to</h5>
+                          <h3 class="text-center">250W MH</h3>
                         </div>
                         <div class="col-xs-6">
                           <div class="text-center top animate fadeIn" data-wow-delay="0.25s">
-                             <img src="assets/images/xtormaxx-pm.png" class="img-responsive" />
+                             <img src="assets/images/xtorwallsmall.png" class="img-responsive" />
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="tab-pane" id="38W">
+                      <div class="row">
+                        <div class="col-xs-6">
+                          <table class="table table-striped">
+                            <thead>
+                              <tr>
+                                <th>CCT</th>
+                                <th class="text-center">Lumens</th>
+                                <th class="text-center">Input Watts</th>
+                                <th class="text-center">lm/W</th>
+                                <th class="text-center">CRI</th>
+                              </tr>
+                            </thead>
+                            <tbody>
+                              <tr class="text-center">
+                                <th scope="row">4000K</th>
+                                <td>00,000</td>
+                                <td>000</td>
+                                <td>00</td>
+                                <td>00</td>
+                              </tr>
+                              <tr class="text-center">
+                                <th scope="row">5000K</th>
+                                <td>00,000</td>
+                                <td>000</td>
+                                <td>00</td>
+                                <td>00</td>
+                              </tr>
+                            </tbody>
+                          </table>
+                          <br>
+                          <h5 class="smtitle text-center">Replaces up to</h5>
+                          <h3 class="text-center">250W MH</h3>
+                        </div>
+                        <div class="col-xs-6">
+                          <div class="text-center top animate fadeIn" data-wow-delay="0.25s">
+                             <img src="assets/images/xtorwallsmall.png" class="img-responsive" />
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="tab-pane" id="58W">
+                      <div class="row">
+                        <div class="col-xs-6">
+                          <table class="table table-striped">
+                            <thead>
+                              <tr>
+                                <th>CCT</th>
+                                <th class="text-center">Lumens</th>
+                                <th class="text-center">Input Watts</th>
+                                <th class="text-center">lm/W</th>
+                                <th class="text-center">CRI</th>
+                              </tr>
+                            </thead>
+                            <tbody>
+                              <tr class="text-center">
+                                <th scope="row">4000K</th>
+                                <td>00,000</td>
+                                <td>000</td>
+                                <td>00</td>
+                                <td>00</td>
+                              </tr>
+                              <tr class="text-center">
+                                <th scope="row">5000K</th>
+                                <td>00,000</td>
+                                <td>000</td>
+                                <td>00</td>
+                                <td>00</td>
+                              </tr>
+                            </tbody>
+                          </table>
+                          <br>
+                          <h5 class="smtitle text-center">Replaces up to</h5>
+                          <h3 class="text-center">450W MH</h3>
+                        </div>
+                        <div class="col-xs-6">
+                          <div class="text-center top animate fadeIn" data-wow-delay="0.25s">
+                             <img src="assets/images/xtorwall.png" class="img-responsive" />
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="tab-pane" id="81W">
+                      <div class="row">
+                        <div class="col-xs-6">
+                          <table class="table table-striped">
+                            <thead>
+                              <tr>
+                                <th>CCT</th>
+                                <th class="text-center">Lumens</th>
+                                <th class="text-center">Input Watts</th>
+                                <th class="text-center">lm/W</th>
+                                <th class="text-center">CRI</th>
+                              </tr>
+                            </thead>
+                            <tbody>
+                              <tr class="text-center">
+                                <th scope="row">4000K</th>
+                                <td>00,000</td>
+                                <td>000</td>
+                                <td>00</td>
+                                <td>00</td>
+                              </tr>
+                              <tr class="text-center">
+                                <th scope="row">5000K</th>
+                                <td>00,000</td>
+                                <td>000</td>
+                                <td>00</td>
+                                <td>00</td>
+                              </tr>
+                            </tbody>
+                          </table>
+                          <br>
+                          <h5 class="smtitle text-center">Replaces up to</h5>
+                          <h3 class="text-center">450W MH</h3>
+                        </div>
+                        <div class="col-xs-6">
+                          <div class="text-center top animate fadeIn" data-wow-delay="0.25s">
+                             <img src="assets/images/xtorwall.png" class="img-responsive" />
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="tab-pane" id="102W">
+                      <div class="row">
+                        <div class="col-xs-6">
+                          <table class="table table-striped">
+                            <thead>
+                              <tr>
+                                <th>CCT</th>
+                                <th class="text-center">Lumens</th>
+                                <th class="text-center">Input Watts</th>
+                                <th class="text-center">lm/W</th>
+                                <th class="text-center">CRI</th>
+                              </tr>
+                            </thead>
+                            <tbody>
+                              <tr class="text-center">
+                                <th scope="row">4000K</th>
+                                <td>00,000</td>
+                                <td>000</td>
+                                <td>00</td>
+                                <td>00</td>
+                              </tr>
+                              <tr class="text-center">
+                                <th scope="row">5000K</th>
+                                <td>00,000</td>
+                                <td>000</td>
+                                <td>00</td>
+                                <td>00</td>
+                              </tr>
+                            </tbody>
+                          </table>
+                          <br>
+                          <h5 class="smtitle text-center">Replaces up to</h5>
+                          <h3 class="text-center">450W MH</h3>
+                        </div>
+                        <div class="col-xs-6">
+                          <div class="text-center top animate fadeIn" data-wow-delay="0.25s">
+                             <img src="assets/images/xtorwall.png" class="img-responsive" />
                           </div>
                         </div>
                       </div>
