--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                           722 lumens (7W model), 2,135 lumens (18W model),
                           2,751 lumens (28W model) to 4,269 lumens
                           (38W model). Bright 5000K and 4000K CCT (18W, 26W, 38W),
-                          neutral warm 3500K CCT (7W).<br>
+                          neutral warm 3500K CCT (7W).
                           <a href="http://www.cooperindustries.com/content/public/en/lighting/products/outdoor_wall_mount_lighting/_269859.brands.lighting!lumark!led.html"> Learn more > </a></p><br>
                           <table class="table">
                             <thead>
@@ -105,7 +105,14 @@
             				<div class="tab-pane" id="18W">
                       <div class="row">
                         <div class="col-xs-6">
-                          <table class="table table-striped">
+                          <h3>Crosstour LED</h3>
+                          <p>The Crosstour LED luminaire delivers from
+                          722 lumens (7W model), 2,135 lumens (18W model),
+                          2,751 lumens (28W model) to 4,269 lumens
+                          (38W model). Bright 5000K and 4000K CCT (18W, 26W, 38W),
+                          neutral warm 3500K CCT (7W).
+                          <a href="http://www.cooperindustries.com/content/public/en/lighting/products/outdoor_wall_mount_lighting/_269859.brands.lighting!lumark!led.html"> Learn more > </a></p><br>
+                          <table class="table">
                             <thead>
                               <tr>
                                 <th>CCT</th>
@@ -146,7 +153,14 @@
             				<div class="tab-pane" id="26W">
                       <div class="row">
                         <div class="col-xs-6">
-                          <table class="table table-striped">
+                          <h3>Crosstour LED</h3>
+                          <p>The Crosstour LED luminaire delivers from
+                          722 lumens (7W model), 2,135 lumens (18W model),
+                          2,751 lumens (28W model) to 4,269 lumens
+                          (38W model). Bright 5000K and 4000K CCT (18W, 26W, 38W),
+                          neutral warm 3500K CCT (7W).
+                          <a href="http://www.cooperindustries.com/content/public/en/lighting/products/outdoor_wall_mount_lighting/_269859.brands.lighting!lumark!led.html"> Learn more > </a></p><br>
+                          <table class="table">
                             <thead>
                               <tr>
                                 <th>CCT</th>
@@ -187,7 +201,14 @@
                     <div class="tab-pane" id="38W">
                       <div class="row">
                         <div class="col-xs-6">
-                          <table class="table table-striped">
+                          <h3>Crosstour LED</h3>
+                          <p>The Crosstour LED luminaire delivers from
+                          722 lumens (7W model), 2,135 lumens (18W model),
+                          2,751 lumens (28W model) to 4,269 lumens
+                          (38W model). Bright 5000K and 4000K CCT (18W, 26W, 38W),
+                          neutral warm 3500K CCT (7W).
+                          <a href="http://www.cooperindustries.com/content/public/en/lighting/products/outdoor_wall_mount_lighting/_269859.brands.lighting!lumark!led.html"> Learn more > </a></p><br>
+                          <table class="table">
                             <thead>
                               <tr>
                                 <th>CCT</th>
@@ -228,7 +249,13 @@
                     <div class="tab-pane" id="58W">
                       <div class="row">
                         <div class="col-xs-6">
-                          <table class="table table-striped">
+                          <h3>Crosstour MAXX</h3>
+                          <p>The Crosstour MAXX luminaire delivers from
+                          722 lumens (7W model), 2,135 lumens (18W model),
+                          2,751 lumens (28W model) to 4,269 lumens
+                          (38W model). Bright 5000K and 4000K CCT (18W, 26W, 38W),
+                          neutral warm 3500K CCT (7W).<a href="http://www.cooperindustries.com/content/public/en/lighting/products/floodlighting/_807703.brands.lighting!lumark!outdoor_floodlighting.html"> Learn more > </a></p><br>
+                          <table class="table">
                             <thead>
                               <tr>
                                 <th>CCT</th>
@@ -269,7 +296,13 @@
                     <div class="tab-pane" id="81W">
                       <div class="row">
                         <div class="col-xs-6">
-                          <table class="table table-striped">
+                          <h3>Crosstour MAXX</h3>
+                          <p>The Crosstour MAXX luminaire delivers from
+                          722 lumens (7W model), 2,135 lumens (18W model),
+                          2,751 lumens (28W model) to 4,269 lumens
+                          (38W model). Bright 5000K and 4000K CCT (18W, 26W, 38W),
+                          neutral warm 3500K CCT (7W).<a href="http://www.cooperindustries.com/content/public/en/lighting/products/floodlighting/_807703.brands.lighting!lumark!outdoor_floodlighting.html"> Learn more > </a></p><br>
+                          <table class="table">
                             <thead>
                               <tr>
                                 <th>CCT</th>
@@ -310,7 +343,13 @@
                     <div class="tab-pane" id="102W">
                       <div class="row">
                         <div class="col-xs-6">
-                          <table class="table table-striped">
+                          <h3>Crosstour MAXX</h3>
+                          <p>The Crosstour MAXX luminaire delivers from
+                          722 lumens (7W model), 2,135 lumens (18W model),
+                          2,751 lumens (28W model) to 4,269 lumens
+                          (38W model). Bright 5000K and 4000K CCT (18W, 26W, 38W),
+                          neutral warm 3500K CCT (7W).<a href="http://www.cooperindustries.com/content/public/en/lighting/products/floodlighting/_807703.brands.lighting!lumark!outdoor_floodlighting.html"> Learn more > </a></p><br>
+                          <table class="table">
                             <thead>
                               <tr>
                                 <th>CCT</th>
